# SolanaVotingApplication

./: README.md
program/: Cargo.toml  program-keypair.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/: package-lock.json  package.json
src/public/: index.html  manifest.json
src/src/: App.css  App.tsx
src/src/components/solana/: accounts.ts  phantom.ts  program.ts  solutil.ts  transaction.ts
src/src/components/ui/: Airdrop.tsx  Vote.tsx  Wallet.tsx
src/src/components/ui/vote/: Create.tsx  List.tsx  View.tsx
src/src/keys/: admin.json  key1.json  key2.json  key3.json
